--- a/src/components/PortfolioMain/PortfolioMain.css
+++ b/src/components/PortfolioMain/PortfolioMain.css
@@ -1,16 +1,17 @@
 .projectGrid {
+    width: 1600px;
+    margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(auto-fit, 320px);
     gap: 20px;
     justify-content: center;
     padding-bottom: 50px;
-
 }
 
 .projectContainer {
     background-color: #009230 !important;
-    border: 1px solid var(--borderColor);
-    -webkit-box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
+    border: 3px solid var(--borderColor);
+    /* -webkit-box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
-    box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
+    box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75); */
 }
