got pictures to display and dimensions set

--- a/src/components/PortfolioMain/PortfolioMain.css
+++ b/src/components/PortfolioMain/PortfolioMain.css
@@ -15,3 +15,9 @@
     -moz-box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
     box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75); */
 }
+
+/* .projectThumnailContainer {
+    display: block;
+    width: 320px;
+    height: 108px;
+} */
