--- a/src/components/PortfolioMain/PortfolioMain.css
+++ b/src/components/PortfolioMain/PortfolioMain.css
@@ -6,18 +6,19 @@
     gap: 20px;
     justify-content: center;
     padding-bottom: 50px;
+    text-align: center;
 }
 
 .projectContainer {
     background-color: #009230 !important;
     border: 3px solid var(--borderColor);
-    /* -webkit-box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
-    box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75); */
+    box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
 }
 
-/* .projectThumnailContainer {
-    display: block;
-    width: 320px;
-    height: 108px;
-} */
+.sourceAndDemo {
+    display: flex;
+    justify-content: space-between;
+    padding: 1em;
+}
