--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -5,8 +5,9 @@
   align-items: center;
 
   margin: 0 0 30px;
-  background-color: #009230;
+  background-color: #0b362c;
   overflow: hidden;
+  border-bottom: 1px solid;
 }
 
 .nav a {
@@ -24,7 +25,7 @@
 .navLink {
   display: inline-block;
   color: #f2f2f2;
-  background-color: #009230;
+  background-color: #737373;
   text-align: center;
   padding: 24px 10px;
   text-decoration: none;
