--- a/src/components/PortfolioMain/PortfolioMain.css
+++ b/src/components/PortfolioMain/PortfolioMain.css
@@ -14,17 +14,18 @@
     border-bottom: 1px, solid;
     background-color: #1f2148;
     color: whitesmoke;
-    height: 100%;
-    position: relative; bottom: 30px;
+    /* height: 100%; */
+    /* position: relative; bottom: 30px; */
     margin: 0 auto;
     grid-template-columns: 1fr 1fr;
     grid-template-areas: "left-column right-column";
-    padding: 10px;
+    padding: 30px;
 }
 
 
 #greetingMessage {
     font-size: 36px;
+    color:  #737373;
 }
 
 .right-column {
@@ -32,20 +33,20 @@
     grid-area: right-column;
     margin: 0 auto;
     padding-left: 50px;
-    max-width: 300px;
-
+    max-width: 500px;
 }
 
 #jokeToDisplay {
     grid-area: right;
     text-align: center;
-    font-size: 24px;
+    font-size: 36px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .left-column {
     display: grid;
     grid-area: left-column;
-    padding: 50px;
+    /* padding: 50px; */
 }
 
 #headshotStylings {
