--- a/src/components/PortfolioMain/PortfolioMain.css
+++ b/src/components/PortfolioMain/PortfolioMain.css
@@ -25,7 +25,30 @@
 
 #greetingMessage {
     font-size: 36px;
-    color:  #737373;
+}
+
+.jokeButtonContainer {
+    display: grid;
+    text-align: center;
+    padding-left: 3em;
+}
+
+#jokeButton:hover {
+    background-color: #728479;
+  }
+  
+
+#jokeButton {
+    border: 2px solid black;
+    border-radius: 12px;
+    color: whitesmoke;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    background-color: #0b362c;
+
 }
 
 .right-column {
