--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,6 +2,7 @@ html,
 body,
 #react-root {
   height: 100%;
+
 }
 
 body {
@@ -110,4 +111,42 @@ Form Treatment
 input {
   margin: 5px;
   margin-bottom: 10px;
+}
+
+@media screen and (max-width: 1200px) {
+  .main-container {
+      width: 95%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .welcomePageContainer {
+      grid-template-columns: 1fr;
+      grid-template-areas:
+          "left-column"
+          "right-column";
+  }
+
+  .right-column {
+      justify-content: center;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  #preview-shadow {
+      max-width: 280px;
+      height: 180px;
+      padding-left: 10px;
+      padding-top: 10px;
+  }
+
+  #preview {
+      width: 280px;
+  }
+  .footer-icons img svg{
+      margin: 5px;
+      color: white;
+      
+      height: 25px;width: 25px;
+  }
 }
