--- a/src/components/PortfolioMain/PortfolioMain.css
+++ b/src/components/PortfolioMain/PortfolioMain.css
@@ -129,7 +129,6 @@
     /* padding-bottom: 50px; */
     text-align: center;
     color: whitesmoke;
-
 }
 
 .projectContainer {
@@ -148,4 +147,56 @@
     justify-content: space-between;
     padding-top: 4em;
     padding: 1em;
+}
+@media screen and (max-width: 1200px) {
+    .main-container {
+        width: 95%;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .welcomePage {
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "left-column"
+            "right-column";
+    }
+
+    .right-column {
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    #preview-shadow {
+        max-width: 280px;
+        height: 180px;
+        padding-left: 10px;
+        padding-top: 10px;
+    }
+
+    #preview {
+        width: 280px;
+    }
+    .footer-icons img svg{
+        margin: 5px;
+        color: white;
+        
+        height: 25px;width: 25px;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .projectGrid {
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+        "projectContainer";
+        width: 320px;
+    }
+
+    /* .projectContainer {
+        width: 320px;
+    } */
+
+
 }
